<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AdventureSetUp" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_adventure_title" />
	<EditText
	    android:id="@+id/adventure_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:hint="@string/hint_adventure_title"
	    android:inputType="textEmailAddress" />

 	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_adventure_start_date" />
 	<Button 
	    android:id="@+id/picker_start_date" 	    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/btn_adventure_start_date" 
	    android:onClick="showDatePickerDialog" />
 	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_adventure_start_time" />
 	<Button 
	    android:id="@+id/picker_start_time" 	    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/btn_adventure_start_time" 
	    android:onClick="showTimePickerDialog" />
 	
 	
 	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_adventure_end_date" />
 	<Button 
	    android:id="@+id/picker_end_date" 	    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/btn_adventure_end_date" 
	    android:onClick="showDatePickerDialog" />
 	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_adventure_end_time" />
 	<Button 
	    android:id="@+id/picker_end_time" 	    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/btn_adventure_end_time" 
	    android:onClick="showTimePickerDialog" />
 	
 	<Button 
	    android:id="@+id/btn_schedule_adventure" 	    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/btn_schedule_adventure" 
	    android:onClick="scheduleAdventure" />
 	
	    	
</LinearLayout>